# Curso-ROS

./: CMakeLists.txt  README.md  package.xml
include/: readme
src/Leccion01_basicos/listener_talker/cpp/: listener.cpp  talker.cpp
src/Leccion01_basicos/listener_talker/scripts/: listener.py  talker.py
src/Leccion01_basicos/listener_talker/scripts_py/: listener.py  talker.py
